# gesture

./: .gitignore  README.md
gestures/: Cargo.toml  LICENSE-MIT  gestures.toml
gestures/src/: config.rs  gesture_state.rs  libinput.rs  main.rs
libgestures/: Cargo.toml
libgestures/src/: filters.rs  frame.rs  geom.rs  gesture.rs  lib.rs  manager.rs  recognizer.rs
libgestures/src/gestures/: compound.rs  mod.rs  primitive.rs
