[package]
name = "gestures"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
    chan = "0.1"
    chan-signal = "0.3"
    env_logger = "0.4"
    input = "0.3"
    libc = "0.2"
    libgestures = { path = "../libgestures" }
    libudev-sys = "0.1"
    log = "0.4"
    serde = "1.0"
    serde_derive = "1.0"
    toml = "0.4"

